第二次作业

--- a/第二次作业.ipynb
+++ b/第二次作业.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ae90f377",
+   "id": "c1169d83",
    "metadata": {},
    "source": [
     "# 第二次作业"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8682dea8",
+   "id": "6112ae3a",
    "metadata": {},
    "source": [
     "## 1.简述list和tuple两种数据类型的共同点和差异"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b362e24",
+   "id": "755a2232",
    "metadata": {},
    "source": [
     "+ 共同点\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55e53de2",
+   "id": "ed8902d9",
    "metadata": {},
    "source": [
     "+ 不同点\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20f907c0",
+   "id": "82968e5f",
    "metadata": {},
    "source": [
     "## 2. 利用dir() 查询list的内置函数，选6个内置函数进行解释并举例说明其具体用法"
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b0def67",
+   "id": "cada4f07",
    "metadata": {},
    "source": [
     "   ### 查询代码与结果如下"
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "57c15f0a",
+   "id": "1d5d2b68",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99b5e9ea",
+   "id": "0b511950",
    "metadata": {},
    "source": [
     "### 解释说明"
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20f7728b",
+   "id": "5f003519",
    "metadata": {},
    "source": [
     "+ **len()**\n",
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "e4969994",
+   "id": "ea941b98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "466c5018",
+   "id": "e95f8a88",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b1620c5",
+   "id": "3b783188",
    "metadata": {},
    "source": [
     "+ **max()**\n",
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "4f9923d0",
+   "id": "a0c3e9a7",
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fc78625",
+   "id": "bb0fadde",
    "metadata": {},
    "source": [
     "+ **min()**\n",
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "13c8e932",
+   "id": "94631f2e",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4d56b5c",
+   "id": "9442d0d1",
    "metadata": {},
    "source": [
     "+ **list.append(obj)**\n",
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "75b94a53",
+   "id": "35c8ee0a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "8104606e",
+   "id": "61e0a6ef",
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdd2fa15",
+   "id": "49d3929f",
    "metadata": {},
    "source": [
     "+ \t**list.count(obj)**\n",
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "14143281",
+   "id": "bce62e36",
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9dccafdc",
+   "id": "af3b6e67",
    "metadata": {},
    "source": [
     "+ **list.reverse()**\n",
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "3c7cb59d",
+   "id": "2946b33a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "fde1e52c",
+   "id": "0079e73a",
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d47fff1",
+   "id": "2373b028",
    "metadata": {},
    "source": [
     "## 3. 有两个list，L1和L2，请找出下列元素？\n",
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0551bb4f",
+   "id": "1a99ea2f",
    "metadata": {},
    "source": [
     "首先我们假设出两个list"
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "fb3715bb",
+   "id": "74699cee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8808085c",
+   "id": "c40f8071",
    "metadata": {},
    "source": [
     "(1) 求L1和L2共同元素，利用列表生成式，代码如下"
@@ -382,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "f28bc7e2",
+   "id": "b7b696da",
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7631b67e",
+   "id": "a45c9866",
    "metadata": {},
    "source": [
     "(2)求L1中特有的元素，同上，代码如下"
@@ -409,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "d272a103",
+   "id": "32e88e59",
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05ac4916",
+   "id": "eaeb6412",
    "metadata": {},
    "source": [
     "(3)求L1中的元素在L2中元素的位置"
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "a965bfe3",
+   "id": "bb0e1693",
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fea8b595",
+   "id": "fb865d6b",
    "metadata": {},
    "source": [
     "## 4. 任给一个list 按如下形式进行压缩：例如L=[1,1,2,3,4,4,4,7,7,7,7,9,10,10,10]  缩成下列形式Y=[1,2, 2,1, 3,1, 4,3, 7,4, 9,1, 10,3]，并比较压缩前后的长度。解压缩，已知压缩的Y，怎么还原L？\n"
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd50b684",
+   "id": "3574b7f2",
    "metadata": {},
    "source": [
     "直接利用循环"
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": 170,
-   "id": "d3385f24",
+   "id": "4facf072",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": 171,
-   "id": "85463ca8",
+   "id": "46917757",
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4566400",
+   "id": "e2c234cb",
    "metadata": {},
    "source": [
     "很明显，压缩前后的长度取决于原列表的格式，原列表中相同相邻的数据越多，压缩后的列表越短\n",
@@ -542,7 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": 174,
-   "id": "99b95fe7",
+   "id": "fd93af6d",
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53f6f847",
+   "id": "55f12466",
    "metadata": {},
    "source": [
     "## 5. 已知字符串“ENSG00000119714:GPR68|ENST00000238699:SYNONYMOUS_CODING(409;144;48;A;gcC/gcT)|ENST00000529102:SYNONYMOUS_CODING(455;114;38;A;gcC/gcT)|ENST00000531499:SYNONYMOUS_CODING(454;114;38;A;gcC/gcT)|ENST00000535815:SYNONYMOUS_CODING(455;114;38;A;gcC/gcT)|”第一个“|”表示的为基因，后面的“|”表示的为转录本，每两个‘|’中间的”()”中包含密码子转换“gcC/gcT”，请把该字符串整理成list格式，list名为基因名，该字符串的名称为GPR68基因=[[转录本1，密码子转换1]，[转录本2，密码子转换2],… ]\n"
@@ -575,14 +575,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7de386ca",
+   "id": "111815b6",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "47d34c18",
+   "id": "b524d6ab",
    "metadata": {},
    "source": [
     "## 6\t掷骰子正面朝上的样本空间Ω={1，2，3，4，5，6}，输出\n",
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ecffeab",
+   "id": "7061adf8",
    "metadata": {},
    "source": [
     "首先用集合表示出样本空间："
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": 184,
-   "id": "b9f9d8bd",
+   "id": "139f7785",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "7154c641",
+   "id": "12fc5fea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d620ff8",
+   "id": "f09f9487",
    "metadata": {},
    "source": [
     "接下来运行代码，分别解出各个题目"
@@ -647,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": 187,
-   "id": "0f15bb49",
+   "id": "163f7d14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,25 +658,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
-   "id": "ab575fcb",
+   "execution_count": 189,
+   "id": "f306198d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "第一题的结果是[{1}, {2, 3, 4, 5, 6}, {1, 2, 3, 4, 5, 6}, set()]，第二题的结果是[{2}, {1, 3, 4, 5, 6}, {1, 2, 3, 4, 5, 6}, set()]，第三题的结果是[{1}, {2, 3}, {2, 3, 4, 5, 6}, {1, 4, 5, 6}, {1, 2, 3}, {1, 2, 3, 4, 5, 6}, {4, 5, 6}, set()]\n"
+      "第一题的结果是[{1}, {2, 3, 4, 5, 6}, {1, 2, 3, 4, 5, 6}, set()]，\n",
+      "第二题的结果是[{2}, {1, 3, 4, 5, 6}, {1, 2, 3, 4, 5, 6}, set()]，\n",
+      "第三题的结果是[{1}, {2, 3}, {2, 3, 4, 5, 6}, {1, 4, 5, 6}, {1, 2, 3}, {1, 2, 3, 4, 5, 6}, {4, 5, 6}, set()]\n"
      ]
     }
    ],
    "source": [
-    "print(f\"第一题的结果是{sigma_1}，第二题的结果是{sigma_2}，第三题的结果是{sigma_3}\")"
+    "print(f\"第一题的结果是{sigma_1}，\\n第二题的结果是{sigma_2}，\\n第三题的结果是{sigma_3}\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "dd55fa30",
+   "id": "89f0fcda",
    "metadata": {},
    "source": [
     "其中set()表示空集"
