--- a/第二次作业.ipynb
+++ b/第二次作业.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "id": "1d5d2b68",
    "metadata": {},
    "outputs": [
@@ -110,7 +110,7 @@
        " 'sort']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 25,
    "id": "ea941b98",
    "metadata": {},
    "outputs": [],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 26,
    "id": "e95f8a88",
    "metadata": {},
    "outputs": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 27,
    "id": "a0c3e9a7",
    "metadata": {},
    "outputs": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 28,
    "id": "94631f2e",
    "metadata": {},
    "outputs": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 29,
    "id": "35c8ee0a",
    "metadata": {},
    "outputs": [],
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 30,
    "id": "61e0a6ef",
    "metadata": {},
    "outputs": [
@@ -260,7 +260,7 @@
        "[1, 2, 5, 6, 5]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 31,
    "id": "bce62e36",
    "metadata": {},
    "outputs": [
@@ -291,7 +291,7 @@
        "2"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 32,
    "id": "2946b33a",
    "metadata": {},
    "outputs": [],
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 33,
    "id": "0079e73a",
    "metadata": {},
    "outputs": [
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 34,
    "id": "74699cee",
    "metadata": {},
    "outputs": [],
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 35,
    "id": "b7b696da",
    "metadata": {},
    "outputs": [
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 36,
    "id": "32e88e59",
    "metadata": {},
    "outputs": [
@@ -418,7 +418,7 @@
        "[1, 5, 12, 68, 21, 7]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 37,
    "id": "bb0e1693",
    "metadata": {},
    "outputs": [
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 38,
    "id": "4facf072",
    "metadata": {},
    "outputs": [],
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 39,
    "id": "46917757",
    "metadata": {},
    "outputs": [
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 40,
    "id": "fd93af6d",
    "metadata": {},
    "outputs": [
@@ -573,12 +573,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "351d09e0",
+   "metadata": {},
+   "source": [
+    "首先设出所需处理的字符串\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "111815b6",
+   "execution_count": 41,
+   "id": "cb901d2f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "str_5 = 'ENSG00000119714:GPR68|ENST00000238699:SYNONYMOUS_CODING(409;144;48;A;gcC/gcT)|ENST00000529102:SYNONYMOUS_CODING(455;114;38;A;gcC/gcT)|ENST00000531499:SYNONYMOUS_CODING(454;114;38;A;gcC/gcT)|ENST00000535815:SYNONYMOUS_CODING(455;114;38;A;gcC/gcT)|'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "6e79f089",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['ENST00000238699:SYNONYMOUS_CODING(409;144;48;A;gcC/gcT)', 'gcC/gcT'], ['ENST00000529102:SYNONYMOUS_CODING(455;114;38;A;gcC/gcT)', 'gcC/gcT'], ['ENST00000531499:SYNONYMOUS_CODING(454;114;38;A;gcC/gcT)', 'gcC/gcT'], ['ENST00000535815:SYNONYMOUS_CODING(455;114;38;A;gcC/gcT)', 'gcC/gcT']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "GPR68 = []\n",
+    "temp_5_par = str_5.split('|')\n",
+    "for i in range(1,len(temp_5_par)-1):\n",
+    "    temp = []\n",
+    "    temp.append(temp_5_par[i])\n",
+    "    temp.append(temp_5_par[i].split(':')[-1].split(';')[-1][:-1])\n",
+    "    \n",
+    "    GPR68 += [temp]\n",
+    "    \n",
+    "print(GPR68)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -599,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 43,
    "id": "139f7785",
    "metadata": {},
    "outputs": [],
@@ -609,12 +646,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 44,
    "id": "12fc5fea",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## 定义函数，其中运用了函数\n",
+    "## 定义函数，其中运用了函数递归调用\n",
     "def sigmamin(a):\n",
     "    sigma_min = a  \n",
     "    def main(a):\n",
@@ -626,9 +663,9 @@
     "                flag = 1\n",
     "        for i in a:\n",
     "            for j in a:\n",
-    "                jiao = i|j\n",
-    "                if i != j and jiao not in a:\n",
-    "                    a += [i|j]\n",
+    "                bin = i|j\n",
+    "                if i != j and bin not in a:\n",
+    "                    a += [bin]\n",
     "                    flag = 1\n",
     "        if flag == 1:\n",
     "            main(sigma_min)\n",
@@ -646,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 45,
    "id": "163f7d14",
    "metadata": {},
    "outputs": [],
@@ -658,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 46,
    "id": "f306198d",
    "metadata": {},
    "outputs": [
