完成了七，八次作业

--- a/第八次作业.ipynb
+++ b/第八次作业.ipynb
@@ -174,9 +174,227 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3d64cee3",
+   "metadata": {},
+   "source": [
+    "各个文件主要代码如下"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "d401b19e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#物品文件: items.py\n",
+    "# Define here the models for your scraped items\n",
+    "#\n",
+    "# See documentation in:\n",
+    "# https://docs.scrapy.org/en/latest/topics/items.html\n",
+    "\n",
+    "import scrapy\n",
+    "\n",
+    "\n",
+    "class StockItem(scrapy.Item):\n",
+    "    # define the fields for your item here like:\n",
+    "    # name = scrapy.Field()\n",
+    "    code = scrapy.Field()\n",
+    "    name = scrapy.Field()\n",
+    "    latest_price = scrapy.Field()\n",
+    "    chg = scrapy.Field()\n",
+    "    change = scrapy.Field()\n",
+    "    volume = scrapy.Field()\n",
+    "    turnover = scrapy.Field()\n",
+    "    amplitude = scrapy.Field()\n",
+    "    highest = scrapy.Field()\n",
+    "    lowest = scrapy.Field()\n",
+    "    price_today = scrapy.Field()\n",
+    "    prec = scrapy.Field()\n",
+    "    volume_ratio = scrapy.Field()  \n",
+    "    turnover_rate = scrapy.Field()  \n",
+    "    pe_ratio = scrapy.Field()  \n",
+    "    pb_ration = scrapy.Field()  \n",
+    "\n",
+    "\n",
+    "\n",
+    "    pass\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d56ffe6a",
+   "id": "3e8eaf15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 主爬虫文件：eastmoney.py\n",
+    "import scrapy\n",
+    "from stock.items import StockItem\n",
+    "import json\n",
+    "import urllib\n",
+    "\n",
+    "\n",
+    "class EastmoneySpider(scrapy.Spider):\n",
+    "    name = 'eastmoney'\n",
+    "    allowed_domains = ['eastmoney.com']\n",
+    "    start_urls = ['http://32.push2.eastmoney.com/api/qt/clist/get']\n",
+    "\n",
+    "\n",
+    "    def get_params(self,page):\n",
+    "        params = {\n",
+    "            \n",
+    "            'pn': str(page),\n",
+    "            'pz': '20',\n",
+    "            'po': '1',\n",
+    "            'np': '1',\n",
+    "            'ut': 'bd1d9ddb04089700cf9c27f6f7426281',\n",
+    "            'fltt': '2',\n",
+    "            'invt': '2',\n",
+    "            'wbp2u': '|0|0|0|web',\n",
+    "            'fid': 'f3',\n",
+    "            'fs': 'm:0 t:6,m:0 t:80,m:1 t:2,m:1 t:23,m:0 t:81 s:2048',\n",
+    "            'fields': 'f1,f2,f3,f4,f5,f6,f7,f8,f9,f10,f12,f13,f14,f15,f16,f17,f18,f20,f21,f23,f24,f25,f22,f11,f62,f128,f136,f115,f152',\n",
+    "        }\n",
+    "        return params\n",
+    "\n",
+    "\n",
+    "    def start_requests(self):\n",
+    "        requests = []\n",
+    "        for i in range(112):\n",
+    "            requests.append(scrapy.Request(url=self.start_urls[0] +'?'+ urllib.parse.urlencode(self.get_params(i+1)),headers={'Referer': 'http://quote.eastmoney.com/'}))\n",
+    "        return requests\n",
+    "\n",
+    "\n",
+    "    def parse(self, response):\n",
+    "        item = StockItem()\n",
+    "        data = json.loads(response.text)\n",
+    "        # print(data)\n",
+    "        for s in data['data']['diff']:\n",
+    "            item['code'] = s['f12']\n",
+    "            item['name'] = s['f14']\n",
+    "            item['latest_price'] = s['f15']\n",
+    "            item['chg'] = s['f3']\n",
+    "            item['change'] = s['f4']\n",
+    "            item['volume'] = s['f5']\n",
+    "            item['turnover'] = s['f6']\n",
+    "            item['amplitude'] = s['f7']\n",
+    "            item['highest'] = s['f15']\n",
+    "            item['lowest'] = s['f16']\n",
+    "            item['price_today'] = s['f17']\n",
+    "            item['prec'] = s['f18']\n",
+    "            item['volume_ratio'] = s['f10']\n",
+    "            item['turnover_rate'] = s['f8']\n",
+    "            item['pe_ratio'] = s['f9']\n",
+    "            item['pb_ration'] = s['f23']\n",
+    "            # print(item)\n",
+    "            yield item\n",
+    "\n",
+    "        pass\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98748e79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 物品处理文件： pipelines.py\n",
+    "# Define your item pipelines here\n",
+    "#\n",
+    "# Don't forget to add your pipeline to the ITEM_PIPELINES setting\n",
+    "# See: https://docs.scrapy.org/en/latest/topics/item-pipeline.html\n",
+    "\n",
+    "\n",
+    "# useful for handling different item types with a single interface\n",
+    "from itemadapter import ItemAdapter\n",
+    "\n",
+    "\n",
+    "class StockPipeline:\n",
+    "    def process_item(self, item, spider):\n",
+    "        return item\n",
+    "\n",
+    "\n",
+    "class Stockinfopipeline:\n",
+    "    def open_spider(self, spider):\n",
+    "        self.count = 1\n",
+    "        self.f = open('eastmoney.txt','w',encoding='utf-8')\n",
+    "\n",
+    "    def close_spider(self,spider):\n",
+    "        self.f.close()\n",
+    "\n",
+    "\n",
+    "    def process_item(self,item,spider):\n",
+    "        try:\n",
+    "            line =str(self.count) + '\\t' + str(dict(item)) + '\\n'\n",
+    "            self.f.write(line)\n",
+    "            self.count += 1\n",
+    "        except:\n",
+    "            pass\n",
+    "        return item"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ad89a92",
+   "metadata": {},
+   "source": [
+    "+ 在设置文件中设置了user_agent与robot协议"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26ba858b",
+   "metadata": {},
+   "source": [
+    "+ 部分结果如下"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3829bb23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1\t{'code': '300894', 'name': '火星人', 'latest_price': 30.78, 'chg': 5.1, 'change': 1.49, 'volume': 24231, 'turnover': 73059315.22, 'amplitude': 6.65, 'highest': 30.78, 'lowest': 28.84, 'price_today': 29.18, 'prec': 29.19, 'volume_ratio': 2.16, 'turnover_rate': 2.15, 'pe_ratio': 44.87, 'pb_ration': 8.31}\n",
+    "2\t{'code': '600781', 'name': '*ST辅仁', 'latest_price': 2.89, 'chg': 5.09, 'change': 0.14, 'volume': 169196, 'turnover': 48251981.0, 'amplitude': 5.82, 'highest': 2.89, 'lowest': 2.73, 'price_today': 2.74, 'prec': 2.75, 'volume_ratio': 1.72, 'turnover_rate': 4.52, 'pe_ratio': -2.2, 'pb_ration': 4.67}\n",
+    "3\t{'code': '600048', 'name': '保利发展', 'latest_price': 18.56, 'chg': 5.06, 'change': 0.89, 'volume': 1358947, 'turnover': 2486154980.0, 'amplitude': 6.48, 'highest': 18.56, 'lowest': 17.42, 'price_today': 17.49, 'prec': 17.58, 'volume_ratio': 2.1, 'turnover_rate': 1.14, 'pe_ratio': 10.21, 'pb_ration': 1.22}\n",
+    "4\t{'code': '600289', 'name': 'ST信通', 'latest_price': 3.12, 'chg': 5.05, 'change': 0.15, 'volume': 61870, 'turnover': 19133091.0, 'amplitude': 5.39, 'highest': 3.12, 'lowest': 2.96, 'price_today': 2.98, 'prec': 2.97, 'volume_ratio': 4.66, 'turnover_rate': 1.09, 'pe_ratio': -10.15, 'pb_ration': 1.22}\n",
+    "5\t{'code': '600303', 'name': 'ST曙光', 'latest_price': 6.88, 'chg': 5.04, 'change': 0.33, 'volume': 145734, 'turnover': 99054723.0, 'amplitude': 4.27, 'highest': 6.88, 'lowest': 6.6, 'price_today': 6.69, 'prec': 6.55, 'volume_ratio': 0.37, 'turnover_rate': 2.16, 'pe_ratio': -22.22, 'pb_ration': 1.95}\n",
+    "6\t{'code': '603603', 'name': '*ST博天', 'latest_price': 6.48, 'chg': 5.02, 'change': 0.31, 'volume': 124638, 'turnover': 80156393.0, 'amplitude': 4.54, 'highest': 6.48, 'lowest': 6.2, 'price_today': 6.2, 'prec': 6.17, 'volume_ratio': 0.79, 'turnover_rate': 4.67, 'pe_ratio': -6.98, 'pb_ration': -2.51}\n",
+    "7\t{'code': '000889', 'name': 'ST中嘉', 'latest_price': 2.3, 'chg': 5.02, 'change': 0.11, 'volume': 564691, 'turnover': 127043774.5, 'amplitude': 6.85, 'highest': 2.3, 'lowest': 2.15, 'price_today': 2.19, 'prec': 2.19, 'volume_ratio': 2.1, 'turnover_rate': 6.49, 'pe_ratio': -51.29, 'pb_ration': 6.79}\n",
+    "8\t{'code': '002200', 'name': 'ST交投', 'latest_price': 8.16, 'chg': 5.02, 'change': 0.39, 'volume': 7489, 'turnover': 6111024.0, 'amplitude': 0.0, 'highest': 8.16, 'lowest': 8.16, 'price_today': 8.16, 'prec': 7.77, 'volume_ratio': 1.47, 'turnover_rate': 0.41, 'pe_ratio': -42.15, 'pb_ration': 69.65}\n",
+    "9\t{'code': '002022', 'name': '*ST 科华', 'latest_price': 12.38, 'chg': 5.0, 'change': 0.59, 'volume': 81933, 'turnover': 99318588.86, 'amplitude': 5.09, 'highest': 12.38, 'lowest': 11.78, 'price_today': 11.79, 'prec': 11.79, 'volume_ratio': 1.2, 'turnover_rate': 1.59, 'pe_ratio': 68.57, 'pb_ration': 1.77}\n",
+    "10\t{'code': '603117', 'name': 'ST万林', 'latest_price': 2.73, 'chg': 5.0, 'change': 0.13, 'volume': 272672, 'turnover': 72626804.0, 'amplitude': 5.38, 'highest': 2.73, 'lowest': 2.59, 'price_today': 2.66, 'prec': 2.6, 'volume_ratio': 3.61, 'turnover_rate': 4.31, 'pe_ratio': -56.58, 'pb_ration': 0.88}\n",
+    "11\t{'code': '600666', 'name': '*ST瑞德', 'latest_price': 1.89, 'chg': 5.0, 'change': 0.09, 'volume': 443588, 'turnover': 82014264.0, 'amplitude': 7.78, 'highest': 1.89, 'lowest': 1.75, 'price_today': 1.78, 'prec': 1.8, 'volume_ratio': 5.0, 'turnover_rate': 5.02, 'pe_ratio': -6.44, 'pb_ration': -4.72}\n",
+    "12\t{'code': '002411', 'name': '*ST必康', 'latest_price': 10.55, 'chg': 4.98, 'change': 0.5, 'volume': 37562, 'turnover': 39627910.0, 'amplitude': 0.0, 'highest': 10.55, 'lowest': 10.55, 'price_today': 10.55, 'prec': 10.05, 'volume_ratio': 0.11, 'turnover_rate': 0.25, 'pe_ratio': 24.96, 'pb_ration': 2.03}\n",
+    "13\t{'code': '600139', 'name': '*ST西源', 'latest_price': 4.23, 'chg': 4.96, 'change': 0.2, 'volume': 211353, 'turnover': 88025270.0, 'amplitude': 5.46, 'highest': 4.23, 'lowest': 4.01, 'price_today': 4.15, 'prec': 4.03, 'volume_ratio': 1.01, 'turnover_rate': 3.19, 'pe_ratio': -19.28, 'pb_ration': -5.0}\n",
+    "14\t{'code': '600112', 'name': '*ST天成', 'latest_price': 4.03, 'chg': 4.95, 'change': 0.19, 'volume': 135614, 'turnover': 54296739.0, 'amplitude': 4.95, 'highest': 4.03, 'lowest': 3.84, 'price_today': 3.88, 'prec': 3.84, 'volume_ratio': 1.28, 'turnover_rate': 2.66, 'pe_ratio': 96.04, 'pb_ration': 14.26}\n",
+    "15\t{'code': '002592', 'name': 'ST八菱', 'latest_price': 6.17, 'chg': 4.93, 'change': 0.29, 'volume': 100715, 'turnover': 60964063.28, 'amplitude': 5.1, 'highest': 6.17, 'lowest': 5.87, 'price_today': 5.87, 'prec': 5.88, 'volume_ratio': 0.82, 'turnover_rate': 3.85, 'pe_ratio': 74.46, 'pb_ration': 2.33}\n",
+    "16\t{'code': '002211', 'name': 'ST宏达', 'latest_price': 2.98, 'chg': 4.93, 'change': 0.14, 'volume': 132990, 'turnover': 38400893.92, 'amplitude': 7.75, 'highest': 2.98, 'lowest': 2.76, 'price_today': 2.84, 'prec': 2.84, 'volume_ratio': 3.41, 'turnover_rate': 3.08, 'pe_ratio': -35.28, 'pb_ration': 37.07}\n",
+    "17\t{'code': '300767', 'name': '震安科技', 'latest_price': 56.39, 'chg': 4.91, 'change': 2.63, 'volume': 21100, 'turnover': 116659976.16, 'amplitude': 6.31, 'highest': 56.39, 'lowest': 53.01, 'price_today': 53.05, 'prec': 53.55, 'volume_ratio': 0.99, 'turnover_rate': 1.04, 'pe_ratio': 124.76, 'pb_ration': 11.01}\n",
+    "18\t{'code': '002881', 'name': '美格智能', 'latest_price': 42.0, 'chg': 4.9, 'change': 1.95, 'volume': 28122, 'turnover': 113650012.9, 'amplitude': 9.08, 'highest': 42.0, 'lowest': 38.39, 'price_today': 39.34, 'prec': 39.76, 'volume_ratio': 1.21, 'turnover_rate': 1.75, 'pe_ratio': 57.92, 'pb_ration': 13.17}\n",
+    "19\t{'code': '000856', 'name': '冀东装备', 'latest_price': 9.21, 'chg': 4.9, 'change': 0.41, 'volume': 152611, 'turnover': 135626055.83, 'amplitude': 10.16, 'highest': 9.21, 'lowest': 8.36, 'price_today': 8.42, 'prec': 8.37, 'volume_ratio': 3.66, 'turnover_rate': 6.72, 'pe_ratio': 206.67, 'pb_ration': 5.26}\n",
+    "20\t{'code': '002352', 'name': '顺丰控股', 'latest_price': 50.51, 'chg': 4.87, 'change': 2.34, 'volume': 331746, 'turnover': 1655967000.47, 'amplitude': 4.95, 'highest': 50.51, 'lowest': 48.13, 'price_today': 48.5, 'prec': 48.04, 'volume_ratio': 1.99, 'turnover_rate': 0.68, 'pe_ratio': 49.08, 'pb_ration': 3.02}\n",
+    "21\t{'code': '002372', 'name': '伟星新材', 'latest_price': 21.11, 'chg': 7.24, 'change': 1.42, 'volume': 158072, 'turnover': 327342032.5, 'amplitude': 8.47, 'highest': 21.11, 'lowest': 19.45, 'price_today': 19.6, 'prec': 19.61, 'volume_ratio': 2.36, 'turnover_rate': 1.09, 'pe_ratio': 45.89, 'pb_ration': 7.72}\n",
+    "22\t{'code': '603008', 'name': '喜临门', 'latest_price': 36.88, 'chg': 7.12, 'change': 2.39, 'volume': 81781, 'turnover': 291263547.0, 'amplitude': 10.4, 'highest': 36.88, 'lowest': 33.39, 'price_today': 33.5, 'prec': 33.57, 'volume_ratio': 2.35, 'turnover_rate': 2.11, 'pe_ratio': 31.72, 'pb_ration': 4.07}\n",
+    "23\t{'code': '688331', 'name': '荣昌生物', 'latest_price': 54.65, 'chg': 7.11, 'change': 3.63, 'volume': 10901, 'turnover': 57981881.0, 'amplitude': 7.08, 'highest': 54.65, 'lowest': 51.04, 'price_today': 51.96, 'prec': 51.02, 'volume_ratio': 1.3, 'turnover_rate': 2.6, 'pe_ratio': -30.41, 'pb_ration': 5.46}\n",
+    "24\t{'code': '002532', 'name': '天山铝业', 'latest_price': 9.14, 'chg': 7.1, 'change': 0.59, 'volume': 2621829, 'turnover': 2328726241.39, 'amplitude': 8.78, 'highest': 9.14, 'lowest': 8.41, 'price_today': 8.41, 'prec': 8.31, 'volume_ratio': 3.85, 'turnover_rate': 11.35, 'pe_ratio': 10.34, 'pb_ration': 1.85}\n",
+    "25\t{'code': '002426', 'name': '胜利精密', 'latest_price': 2.78, 'chg': 7.09, 'change': 0.18, 'volume': 1684131, 'turnover': 452979480.5, 'amplitude': 8.66, 'highest': 2.78, 'lowest': 2.56, 'price_today': 2.56, 'prec': 2.54, 'volume_ratio': 2.35, 'turnover_rate': 5.35, 'pe_ratio': -99.34, 'pb_ration': 2.08}\n",
+    "26\t{'code': '300986', 'name': '志特新材', 'latest_price': 39.1, 'chg': 7.04, 'change': 2.52, 'volume': 52486, 'turnover': 198841110.08, 'amplitude': 10.2, 'highest': 39.1, 'lowest': 35.45, 'price_today': 35.45, 'prec': 35.8, 'volume_ratio': 3.44, 'turnover_rate': 7.5, 'pe_ratio': 44.36, 'pb_ration': 4.9}\n",
+    "27\t{'code': '300737', 'name': '科顺股份', 'latest_price': 11.0, 'chg': 7.03, 'change': 0.72, 'volume': 237654, 'turnover': 255179294.67, 'amplitude': 7.81, 'highest': 11.0, 'lowest': 10.2, 'price_today': 10.26, 'prec': 10.24, 'volume_ratio': 3.71, 'turnover_rate': 2.68, 'pe_ratio': 26.47, 'pb_ration': 2.31}\n",
+    "28\t{'code': '003037', 'name': '三和管桩', 'latest_price': 12.39, 'chg': 7.02, 'change': 0.79, 'volume': 225184, 'turnover': 272433276.76, 'amplitude': 9.86, 'highest': 12.39, 'lowest': 11.28, 'price_today': 11.28, 'prec': 11.26, 'volume_ratio': 4.3, 'turnover_rate': 24.74, 'pe_ratio': 115.45, 'pb_ration': 3.61}\n",
+    "29\t{'code': '000786', 'name': '北新建材', 'latest_price': 27.77, 'chg': 6.98, 'change': 1.8, 'volume': 289580, 'turnover': 785702242.14, 'amplitude': 8.02, 'highest': 27.77, 'lowest': 25.7, 'price_today': 25.71, 'prec': 25.8, 'volume_ratio': 3.97, 'turnover_rate': 1.77, 'pe_ratio': 14.24, 'pb_ration': 2.4}\n",
+    "30\t{'code': '603180', 'name': '金牌厨柜', 'latest_price': 27.96, 'chg': 6.96, 'change': 1.78, 'volume': 38747, 'turnover': 104527164.0, 'amplitude': 9.5, 'highest': 27.96, 'lowest': 25.53, 'price_today': 25.74, 'prec': 25.59, 'volume_ratio': 1.65, 'turnover_rate': 2.69, 'pe_ratio': 22.8, 'pb_ration': 1.78}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23963a9e",
    "metadata": {},
    "outputs": [],
    "source": []
